WIP. Almost there but I need sleep now